2006-03-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/box_data_list_related.h: Added get_suitable_record_to_view_details() 
	and get_has_suitable_record_to_view_details() so that the row button can go to a 
	doubly-related record if the related table is hidden, based on the first related field 
	in the portal.
	* glom/utility_widgets/flowtablewithfields.cc: on_portal_user_requested_details(): 
	If the related table is hidden, use get_has_suitable_record_to_view_details() instead.

2006-03-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/flowtablewithfields.cc: create_related(): Connect to signals 
	here, instead of from the caller. This makes the row details button work in Notebooks.

2006-03-27  Murray Cumming  <murrayc@murrayc.com>

	* glom/document/document_glom.cc:
	* glom/document/document_glom.h:
	get_table_fields(): Hide the hidden system field, though it 
	should never be in the document anyay.
	Added set_parent_window() so that the load/save methods can 
	show a busy cursor, though this does not work yet.
	* glom/application.cc: init_create_document(): Call set_parent_window() on 
	the document.
	* glom/standard_table_prefs_fields.h:
	Added GLOM_STANDARD_FIELD_LOCK - a hidden system field for 
	each table, not used yet.
	* glom/base_db.h: get_fields_for_table_from_database(): 
	Optionally hide the hidden system field.
	* glom/base_db.cc: connect_to_server(), Query_Execute(): Added optional 
	parent_window parameter, so they can show the busy cursor.
	* glom/box_db_table.cc:
	* glom/dialog_connection.cc:
	* glom/dialog_database_preferences.cc:
	* glom/frame_glom.cc:
	* glom/mode_data/box_data.cc:
	* glom/mode_data/box_data_details.cc:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/notebook_data.cc:
	* glom/mode_design/box_db_table_relationships.cc:
	* glom/mode_design/fields/box_db_table_definition.cc: