@@ -1,5 +1,12 @@
 2006-03-27  Murray Cumming  <murrayc@murrayc.com>
 
+	* glom/utility_widgets/db_adddel/db_adddel.cc: Use TreeView::set_fixed_height_mode() and 
+	TreeViewColumn::set_fixed_width(), so that the TreeView does not request values that are 
+	not visible in the scrolled window. If libgda does things properly then this should mean 
+	that we do not get data from the database that we never see.
+
+2006-03-27  Murray Cumming  <murrayc@murrayc.com>
+
 	* glom/mode_data/box_data_list_related.cc:
 	* glom/mode_data/box_data_list_related.h: Added get_suitable_record_to_view_details() 
 	and get_has_suitable_record_to_view_details() so that the row button can go to a 
